Aligned some stuff to center and fixed one of students projects' link (#2)
* Aligned Blog, videos, Projects to center.
* Fixed YashKumarVerma's broken project link.
* Randomized the repositories.
* Did animations.

--- a/css/custom.css
+++ b/css/custom.css
@@ -133,3 +133,7 @@
   display: flex;
   justify-content: space-around;
 }
+
+.repos-container {
+  width: 1470px;
+}
